--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.1.1
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
@@ -15,6 +14,7 @@ MarkupSafe==1.0
 mysqlclient==1.3.12
 pkg-resources==0.0.0
 python-dateutil==2.6.1
+python-dotenv==0.7.1
 python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.1.15
