--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,10 @@
-alabaster==0.7.10
-alembic==0.9.8
-argh==0.26.2
-Babel==2.5.3
-certifi==2018.1.18
-chardet==3.0.4
-click==6.7
-colorama==0.3.9
-docutils==0.14
-dominate==2.3.1
-Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
 Flask-Migrate==2.1.1
-Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
-idna==2.6
-imagesize==1.0.0
-itsdangerous==0.24
-Jinja2==2.10
-livereload==2.5.1
-Mako==1.0.7
-MarkupSafe==1.0
 mysqlclient==1.3.12
-packaging==17.1
-pathtools==0.1.2
-port-for==0.4
-Pygments==2.2.0
-pyparsing==2.2.0
-python-dateutil==2.6.1
 python-dotenv==0.8.0
-python-editor==1.0.3
-pytz==2018.3
-PyYAML==3.12
-requests==2.18.4
-six==1.11.0
-snowballstemmer==1.2.1
 Sphinx==1.7.1
 sphinx-autobuild==0.7.1
 sphinx-rtd-theme==0.2.4
-sphinxcontrib-websupport==1.0.1
-SQLAlchemy==1.1.17
-tornado==4.5.3
-urllib3==1.22
-visitor==0.1.3
-watchdog==0.8.3
-Werkzeug==0.14.1
-WTForms==2.1
