--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
-Flask-Migrate==2.3.1
-Flask-Moment==0.6.0
+Flask-Migrate==2.4.0
+Flask-Moment==0.7.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
-mysqlclient==1.3.14
+mysqlclient==1.4.2post1
 python-dotenv==0.10.0
-pytz==2018.7
+pytz==2018.9
