--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@
 # pytz
 
 # pip freeze:
-alembic==1.0.11
+alembic==1.3.0
 Click==7.0
 dominate==2.4.0
 Flask==1.1.1
@@ -19,23 +19,23 @@ Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
-gitdb2==2.0.5
-GitPython==2.1.13
+gitdb2==2.0.6
+GitPython==3.0.4
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
-mysqlclient==1.4.2.post1
-python-dateutil==2.8.0
+mysqlclient==1.4.5
+python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
-pytz==2019.2
-six==1.12.0
+pytz==2019.3
+six==1.13.0
 smmap2==2.0.5
-SQLAlchemy==1.3.6
+SQLAlchemy==1.3.10
 visitor==0.1.3
-Werkzeug==0.15.5
+Werkzeug==0.16.0
 WTForms==2.2.1
