--- a/requirements.txt
+++ b/requirements.txt
@@ -11,31 +11,31 @@
 # pytz
 
 # pip freeze:
-alembic==1.3.0
+alembic==1.4.0
 Click==7.0
 dominate==2.4.0
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-Migrate==2.5.2
-Flask-Moment==0.9.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.2
-gitdb2==2.0.6
-GitPython==3.0.4
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.3
-Mako==1.1.0
-MarkupSafe==1.1.1
-mysqlclient==1.4.5
-python-dateutil==2.8.1
-python-dotenv==0.10.3
-python-editor==1.0.4
+Flask-Login==0.5.0      
+Flask-Migrate==2.5.2    
+Flask-Moment==0.9.0     
+Flask-SQLAlchemy==2.4.1 
+Flask-WTF==0.14.3       
+gitdb==4.0.2
+GitPython==3.1.0        
+gunicorn==20.0.4        
+itsdangerous==1.1.0     
+Jinja2==2.11.1
+Mako==1.1.1
+MarkupSafe==1.1.1       
+mysqlclient==1.4.6      
+python-dateutil==2.8.1  
+python-dotenv==0.11.0   
+python-editor==1.0.4    
 pytz==2019.3
-six==1.13.0
-smmap2==2.0.5
-SQLAlchemy==1.3.10
+six==1.14.0
+smmap==3.0.1
+SQLAlchemy==1.3.13      
 visitor==0.1.3
-Werkzeug==0.16.0
+Werkzeug==1.0.0
 WTForms==2.2.1
