--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core packages:
+# dash
 # Flask-Bootstrap
 # Flask-Login
 # Flask-Migrate
@@ -7,35 +8,47 @@
 # GitPython
 # gunicorn
 # mysqlclient
+# pandas
 # python-dotenv
 # pytz
 
 # pip freeze:
-alembic==1.4.1
-Click==7.0
+alembic==1.4.2
+click==7.1.1
+dash==1.11.0
+dash-core-components==1.9.1
+dash-html-components==1.0.3
+dash-renderer==1.4.0       
+dash-table==4.6.2
 dominate==2.5.1
-Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.5.0      
-Flask-Migrate==2.5.2    
-Flask-Moment==0.9.0     
-Flask-SQLAlchemy==2.4.1 
-Flask-WTF==0.14.3       
-gitdb==4.0.2
-GitPython==3.1.0        
-gunicorn==20.0.4        
-itsdangerous==1.1.0     
-Jinja2==2.11.1
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1   
+Flask-Compress==1.4.0      
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3       
+Flask-Moment==0.9.0        
+Flask-SQLAlchemy==2.4.1    
+Flask-WTF==0.14.3
+future==0.18.2
+gitdb==4.0.4
+GitPython==3.1.1
+gunicorn==20.0.4
+itsdangerous==1.1.0        
+Jinja2==2.11.2
 Mako==1.1.2
-MarkupSafe==1.1.1       
-mysqlclient==1.4.6      
-python-dateutil==2.8.1  
-python-dotenv==0.12.0   
-python-editor==1.0.4    
+MarkupSafe==1.1.1
+mysqlclient==1.4.6
+numpy==1.18.3
+pandas==1.0.3
+plotly==4.6.0
+python-dateutil==2.8.1     
+python-dotenv==0.13.0      
+python-editor==1.0.4       
 pytz==2019.3
+retrying==1.3.3
 six==1.14.0
-smmap==3.0.1
-SQLAlchemy==1.3.13      
+smmap==3.0.2
+SQLAlchemy==1.3.16
 visitor==0.1.3
-Werkzeug==1.0.0
+Werkzeug==1.0.1
 WTForms==2.2.1
