--- a/requirements.txt
+++ b/requirements.txt
@@ -14,42 +14,45 @@
 
 # pip freeze:
 alembic==1.4.2
+arrow==0.15.6
 Brotli==1.0.7
 click==7.1.2
-dash==1.12.0
-dash-core-components==1.10.0
+dash==1.13.3
+dash-core-components==1.10.1
 dash-html-components==1.0.3 
-dash-renderer==1.4.1        
-dash-table==4.7.0
+dash-renderer==1.5.0        
+dash-table==4.8.1
 dominate==2.5.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1    
 Flask-Compress==1.5.0       
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3        
-Flask-Moment==0.9.0
-Flask-SQLAlchemy==2.4.1     
+Flask-Moment==0.10.0        
+Flask-SQLAlchemy==2.4.3     
 Flask-WTF==0.14.3
 future==0.18.2
 gitdb==4.0.5
-GitPython==3.1.2
+GitPython==3.1.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
-Mako==1.1.2
+jinja2-time==0.2.0
+make==0.1.6.post1
+Mako==1.1.3
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
-numpy==1.18.4
-pandas==1.0.3
-plotly==4.7.1
+numpy==1.18.5
+pandas==1.0.5
+plotly==4.8.1
 python-dateutil==2.8.1      
 python-dotenv==0.13.0       
 python-editor==1.0.4        
 pytz==2020.1
 retrying==1.3.3
-six==1.14.0
+six==1.15.0
 smmap==3.0.4
-SQLAlchemy==1.3.16
+SQLAlchemy==1.3.17
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
