--- a/.ebextensions/python-platform.config
+++ b/.ebextensions/python-platform.config
@@ -1,3 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:container:python
-    WSGIPath: breweryPi
+    - namespace: aws:elasticbeanstalk:container:python
+      option_name: WSGIPath
+      value: breweryPi
