--- a/requirements.txt
+++ b/requirements.txt
@@ -9,41 +9,54 @@
 # pandas
 # python-dotenv
 # pytz
+# WTForms-SQLAlchemy
 
 # pip freeze:
-alembic==1.4.2
-Brotli==1.0.9
-click==7.1.2
-dash==1.15.0
-dash-core-components==1.11.0
-dash-html-components==1.1.0 
-dash-renderer==1.7.0        
-dash-table==4.10.0
-dominate==2.5.2
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1    
-Flask-Compress==1.5.0       
-Flask-Login==0.5.0
-Flask-Migrate==2.5.3        
-Flask-Moment==0.10.0        
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3      
-future==0.18.2
-itsdangerous==1.1.0    
-Jinja2==2.11.2
-Mako==1.1.3
-MarkupSafe==1.1.1     
-mysqlclient==2.0.1    
-numpy==1.19.1
-pandas==1.1.1
-plotly==4.9.0
-python-dateutil==2.8.1
-python-dotenv==0.14.0 
-python-editor==1.0.4  
-pytz==2020.1
-retrying==1.3.3       
-six==1.15.0
-SQLAlchemy==1.3.19    
-visitor==0.1.3        
-Werkzeug==1.0.1       
-WTForms==2.3.3
+alembic==1.13.0
+ansi2html==1.8.0
+blinker==1.7.0
+certifi==2023.11.17        
+charset-normalizer==3.3.2  
+click==8.1.7
+colorama==0.4.6
+dash==2.14.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dominate==2.9.0
+Flask==3.0.0
+Flask-Bootstrap==3.3.7.1   
+Flask-Login==0.6.3
+Flask-Migrate==4.0.5       
+Flask-Moment==1.0.5        
+Flask-SQLAlchemy==3.1.1    
+Flask-WTF==1.2.1
+greenlet==3.0.2
+idna==3.6
+importlib-metadata==7.0.0  
+itsdangerous==2.1.2        
+Jinja2==3.1.2
+Mako==1.3.0
+MarkupSafe==2.1.3
+mysqlclient==2.2.0
+nest-asyncio==1.5.8        
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.4
+plotly==5.18.0
+python-dateutil==2.8.2     
+python-dotenv==1.0.0       
+pytz==2023.3.post1
+requests==2.31.0
+retrying==1.3.4
+six==1.16.0
+SQLAlchemy==2.0.23
+tenacity==8.2.3
+typing_extensions==4.9.0   
+tzdata==2023.3
+urllib3==2.1.0
+visitor==0.1.3
+Werkzeug==3.0.1
+WTForms==3.1.1
+WTForms-SQLAlchemy==0.3
+zipp==3.17.0
